some sexy enhancements

--- a/matthias_index.html
+++ b/matthias_index.html
@@ -34,6 +34,12 @@
                     <p>2015</p>
                 </div>
                 
+                <div class="movie-item">
+                    <img src="https://m.media-amazon.com/images/M/MV5BMGNlYmM1NmQtYWExMS00NmRjLTg5ZmEtMmYyYzJkMzljYWMxXkEyXkFqcGc@._V1_SX300.jpg" alt="Die Hard Poster">
+                    <h3>Die Hard</h3>
+                    <p>1988</p>
+                </div>
+                
     </ol>
 </div>
 </body>
